Entrega2/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    CASE_ASSIGN
    RESERVED
    IN
    MOD

Grammar

Rule 0     S' -> program
Rule 1     program -> INST_PROGRAM Bloque_Inst
Rule 2     Bloque_Inst -> INST_BEGIN Lista_Inst INST_END
Rule 3     Bloque_Inst -> Inst
Rule 4     Lista_Inst -> Inst
Rule 5     Lista_Inst -> Inst SEMICOLON Lista_Inst
Rule 6     Inst -> Inst_Declare
Rule 7     Inst -> Inst_Asignacion
Rule 8     Inst -> Inst_Lectura
Rule 9     Inst -> Inst_For
Rule 10    Inst -> Inst_While
Rule 11    Inst -> Inst_If
Rule 12    Inst -> Inst_Case
Rule 13    Inst -> Inst_Salida
Rule 14    Inst -> Inst_Funcion
Rule 15    Inst_Funcion -> RTOI LPAREN VAR_IDENTIFIER RPAREN
Rule 16    Inst_Funcion -> LENGTH LPAREN VAR_IDENTIFIER RPAREN
Rule 17    Inst_Funcion -> TOP LPAREN VAR_IDENTIFIER RPAREN
Rule 18    Inst_Funcion -> BOTTOM LPAREN VAR_IDENTIFIER RPAREN
Rule 19    Inst_Declare -> Inst_Declareau
Rule 20    Inst_Declare -> Inst_Declareau SEMICOLON Inst_Declare
Rule 21    Inst_Declareau -> INST_DECLARE Lista_Declare
Rule 22    Lista_Declare -> Lista_Variables INST_AS Tipo
Rule 23    Lista_Variables -> VAR_IDENTIFIER
Rule 24    Lista_Variables -> VAR_IDENTIFIER COMMA Lista_Variables
Rule 25    Tipo -> TYPEDEF_INT
Rule 26    Tipo -> TYPEDEF_BOOL
Rule 27    Tipo -> TYPEDEF_RANGE
Rule 28    Inst_Asignacion -> VAR_IDENTIFIER EQUAL Expresion
Rule 29    Expresion -> Operacion_binaria
Rule 30    Expresion -> Operacion_booleana
Rule 31    Expresion -> Rango
Rule 32    Operacion_booleana -> Operacion_binaria Opr_bool Operacion_binaria
Rule 33    Operacion_booleana -> Operacion_booleana AND Operacion_booleana
Rule 34    Operacion_booleana -> Operacion_booleana OR Operacion_booleana
Rule 35    Operacion_booleana -> LPAREN Operacion_booleana RPAREN
Rule 36    Operacion_booleana -> TRUE
Rule 37    Operacion_booleana -> FALSE
Rule 38    Operacion_booleana -> VAR_IDENTIFIER
Rule 39    Operacion_booleana -> NOT Operacion_booleana
Rule 40    Opr_bool -> EQEQ
Rule 41    Opr_bool -> NEQEQ
Rule 42    Opr_bool -> GREAT
Rule 43    Opr_bool -> LESS
Rule 44    Opr_bool -> GREATEQ
Rule 45    Opr_bool -> LESSEQ
Rule 46    Operacion_binaria -> Operacion_binaria PLUS Term
Rule 47    Operacion_binaria -> Operacion_binaria MINUS Term
Rule 48    Operacion_binaria -> Term
Rule 49    Term -> Term TIMES Factor
Rule 50    Term -> Term DIVIDE Factor
Rule 51    Term -> Factor
Rule 52    Factor -> NUMBER
Rule 53    Factor -> VAR_IDENTIFIER
Rule 54    Factor -> LPAREN Operacion_binaria RPAREN
Rule 55    Rango -> Operacion_binaria RANGE Operacion_binaria
Rule 56    Rango -> Rango PLUS Rango
Rule 57    Rango -> Rango TIMES Operacion_binaria
Rule 58    Rango -> Rango INTERSECTION Rango
Rule 59    Rango -> RangoF
Rule 60    RangoF -> LPAREN Rango RPAREN
Rule 61    Inst_Lectura -> INST_READ VAR_IDENTIFIER
Rule 62    Inst_Salida -> INST_WRITE Lista_Aux
Rule 63    Inst_Salida -> INST_WRITELN Lista_Aux
Rule 64    Lista_Aux -> Expresion
Rule 65    Lista_Aux -> STRING
Rule 66    Lista_Aux -> Expresion COMMA Lista_Aux
Rule 67    Lista_Aux -> STRING COMMA Lista_Aux
Rule 68    Inst_If -> INST_IF Operacion_booleana INST_THEN Bloque_Inst
Rule 69    Inst_If -> INST_IF Operacion_booleana INST_THEN Bloque_Inst INST_ELSE Bloque_Inst
Rule 70    Inst_Case -> INST_CASE Operacion_binaria INST_OF Casos
Rule 71    Casos -> VAR_IDENTIFIER - > Bloque_Inst
Rule 72    Casos -> Rango - > Bloque_Inst
Rule 73    Casos -> Casos Casos
Rule 74    Inst_For -> INST_FOR VAR_IDENTIFIER INST_IN Rango INST_DO Bloque_Inst
Rule 75    Inst_While -> INST_WHILE Operacion_booleana INST_DO Bloque_Inst

Terminals, with rules where they appear

-                    : 71 72
>                    : 71 72
AND                  : 33
BOTTOM               : 18
CASE_ASSIGN          : 
COMMA                : 24 66 67
COMMENT              : 
DIVIDE               : 50
EQEQ                 : 40
EQUAL                : 28
FALSE                : 37
GREAT                : 42
GREATEQ              : 44
IN                   : 
INST_AS              : 22
INST_BEGIN           : 2
INST_CASE            : 70
INST_DECLARE         : 21
INST_DO              : 74 75
INST_ELSE            : 69
INST_END             : 2
INST_FOR             : 74
INST_IF              : 68 69
INST_IN              : 74
INST_OF              : 70
INST_PROGRAM         : 1
INST_READ            : 61
INST_THEN            : 68 69
INST_WHILE           : 75
INST_WRITE           : 62
INST_WRITELN         : 63
INTERSECTION         : 58
LENGTH               : 16
LESS                 : 43
LESSEQ               : 45
LPAREN               : 15 16 17 18 35 54 60
MINUS                : 47
MOD                  : 
NEQEQ                : 41
NOT                  : 39
NUMBER               : 52
OR                   : 34
PLUS                 : 46 56
RANGE                : 55
RESERVED             : 
RPAREN               : 15 16 17 18 35 54 60
RTOI                 : 15
SEMICOLON            : 5 20
STRING               : 65 67
TIMES                : 49 57
TOP                  : 17
TRUE                 : 36
TYPEDEF_BOOL         : 26
TYPEDEF_INT          : 25
TYPEDEF_RANGE        : 27
VAR_IDENTIFIER       : 15 16 17 18 23 24 28 38 53 61 71 74
error                : 

Nonterminals, with rules where they appear

Bloque_Inst          : 1 68 69 69 71 72 74 75
Casos                : 70 73 73
Expresion            : 28 64 66
Factor               : 49 50 51
Inst                 : 3 4 5
Inst_Asignacion      : 7
Inst_Case            : 12
Inst_Declare         : 6 20
Inst_Declareau       : 19 20
Inst_For             : 9
Inst_Funcion         : 14
Inst_If              : 11
Inst_Lectura         : 8
Inst_Salida          : 13
Inst_While           : 10
Lista_Aux            : 62 63 66 67
Lista_Declare        : 21
Lista_Inst           : 2 5
Lista_Variables      : 22 24
Operacion_binaria    : 29 32 32 46 47 54 55 55 57 70
Operacion_booleana   : 30 33 33 34 34 35 39 68 69 75
Opr_bool             : 32
Rango                : 31 56 56 57 58 58 60 72 74
RangoF               : 59
Term                 : 46 47 48 49 50
Tipo                 : 22
program              : 0

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . INST_PROGRAM Bloque_Inst

    INST_PROGRAM    shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> INST_PROGRAM . Bloque_Inst
    (2) Bloque_Inst -> . INST_BEGIN Lista_Inst INST_END
    (3) Bloque_Inst -> . Inst
    (6) Inst -> . Inst_Declare
    (7) Inst -> . Inst_Asignacion
    (8) Inst -> . Inst_Lectura
    (9) Inst -> . Inst_For
    (10) Inst -> . Inst_While
    (11) Inst -> . Inst_If
    (12) Inst -> . Inst_Case
    (13) Inst -> . Inst_Salida
    (14) Inst -> . Inst_Funcion
    (19) Inst_Declare -> . Inst_Declareau
    (20) Inst_Declare -> . Inst_Declareau SEMICOLON Inst_Declare
    (28) Inst_Asignacion -> . VAR_IDENTIFIER EQUAL Expresion
    (61) Inst_Lectura -> . INST_READ VAR_IDENTIFIER
    (74) Inst_For -> . INST_FOR VAR_IDENTIFIER INST_IN Rango INST_DO Bloque_Inst
    (75) Inst_While -> . INST_WHILE Operacion_booleana INST_DO Bloque_Inst
    (68) Inst_If -> . INST_IF Operacion_booleana INST_THEN Bloque_Inst
    (69) Inst_If -> . INST_IF Operacion_booleana INST_THEN Bloque_Inst INST_ELSE Bloque_Inst
    (70) Inst_Case -> . INST_CASE Operacion_binaria INST_OF Casos
    (62) Inst_Salida -> . INST_WRITE Lista_Aux
    (63) Inst_Salida -> . INST_WRITELN Lista_Aux
    (15) Inst_Funcion -> . RTOI LPAREN VAR_IDENTIFIER RPAREN
    (16) Inst_Funcion -> . LENGTH LPAREN VAR_IDENTIFIER RPAREN
    (17) Inst_Funcion -> . TOP LPAREN VAR_IDENTIFIER RPAREN
    (18) Inst_Funcion -> . BOTTOM LPAREN VAR_IDENTIFIER RPAREN
    (21) Inst_Declareau -> . INST_DECLARE Lista_Declare

    INST_BEGIN      shift and go to state 11
    VAR_IDENTIFIER  shift and go to state 18
    INST_READ       shift and go to state 10
    INST_FOR        shift and go to state 21
    INST_WHILE      shift and go to state 9
    INST_IF         shift and go to state 22
    INST_CASE       shift and go to state 20
    INST_WRITE      shift and go to state 5
    INST_WRITELN    shift and go to state 23
    RTOI            shift and go to state 25
    LENGTH          shift and go to state 24
    TOP             shift and go to state 6
    BOTTOM          shift and go to state 13
    INST_DECLARE    shift and go to state 3

    Inst_Salida                    shift and go to state 8
    Inst_Declare                   shift and go to state 12
    Inst_Funcion                   shift and go to state 4
    Bloque_Inst                    shift and go to state 7
    Inst_If                        shift and go to state 19
    Inst_For                       shift and go to state 14
    Inst_While                     shift and go to state 16
    Inst                           shift and go to state 15
    Inst_Asignacion                shift and go to state 26
    Inst_Case                      shift and go to state 27
    Inst_Lectura                   shift and go to state 17
    Inst_Declareau                 shift and go to state 28

state 3

    (21) Inst_Declareau -> INST_DECLARE . Lista_Declare
    (22) Lista_Declare -> . Lista_Variables INST_AS Tipo
    (23) Lista_Variables -> . VAR_IDENTIFIER
    (24) Lista_Variables -> . VAR_IDENTIFIER COMMA Lista_Variables

    VAR_IDENTIFIER  shift and go to state 29

    Lista_Variables                shift and go to state 30
    Lista_Declare                  shift and go to state 31

state 4

    (14) Inst -> Inst_Funcion .

    SEMICOLON       reduce using rule 14 (Inst -> Inst_Funcion .)
    INST_END        reduce using rule 14 (Inst -> Inst_Funcion .)
    $end            reduce using rule 14 (Inst -> Inst_Funcion .)
    INST_ELSE       reduce using rule 14 (Inst -> Inst_Funcion .)
    VAR_IDENTIFIER  reduce using rule 14 (Inst -> Inst_Funcion .)
    LPAREN          reduce using rule 14 (Inst -> Inst_Funcion .)
    NUMBER          reduce using rule 14 (Inst -> Inst_Funcion .)


state 5

    (62) Inst_Salida -> INST_WRITE . Lista_Aux
    (64) Lista_Aux -> . Expresion
    (65) Lista_Aux -> . STRING
    (66) Lista_Aux -> . Expresion COMMA Lista_Aux
    (67) Lista_Aux -> . STRING COMMA Lista_Aux
    (29) Expresion -> . Operacion_binaria
    (30) Expresion -> . Operacion_booleana
    (31) Expresion -> . Rango
    (46) Operacion_binaria -> . Operacion_binaria PLUS Term
    (47) Operacion_binaria -> . Operacion_binaria MINUS Term
    (48) Operacion_binaria -> . Term
    (32) Operacion_booleana -> . Operacion_binaria Opr_bool Operacion_binaria
    (33) Operacion_booleana -> . Operacion_booleana AND Operacion_booleana
    (34) Operacion_booleana -> . Operacion_booleana OR Operacion_booleana
    (35) Operacion_booleana -> . LPAREN Operacion_booleana RPAREN
    (36) Operacion_booleana -> . TRUE
    (37) Operacion_booleana -> . FALSE
    (38) Operacion_booleana -> . VAR_IDENTIFIER
    (39) Operacion_booleana -> . NOT Operacion_booleana
    (55) Rango -> . Operacion_binaria RANGE Operacion_binaria
    (56) Rango -> . Rango PLUS Rango
    (57) Rango -> . Rango TIMES Operacion_binaria
    (58) Rango -> . Rango INTERSECTION Rango
    (59) Rango -> . RangoF
    (49) Term -> . Term TIMES Factor
    (50) Term -> . Term DIVIDE Factor
    (51) Term -> . Factor
    (60) RangoF -> . LPAREN Rango RPAREN
    (52) Factor -> . NUMBER
    (53) Factor -> . VAR_IDENTIFIER
    (54) Factor -> . LPAREN Operacion_binaria RPAREN

    STRING          shift and go to state 39
    LPAREN          shift and go to state 42
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45
    VAR_IDENTIFIER  shift and go to state 41
    NOT             shift and go to state 46
    NUMBER          shift and go to state 33

    Expresion                      shift and go to state 37
    Operacion_binaria              shift and go to state 44
    RangoF                         shift and go to state 32
    Factor                         shift and go to state 40
    Term                           shift and go to state 38
    Lista_Aux                      shift and go to state 34
    Rango                          shift and go to state 43
    Operacion_booleana             shift and go to state 36

state 6

    (17) Inst_Funcion -> TOP . LPAREN VAR_IDENTIFIER RPAREN

    LPAREN          shift and go to state 47


state 7

    (1) program -> INST_PROGRAM Bloque_Inst .

    $end            reduce using rule 1 (program -> INST_PROGRAM Bloque_Inst .)


state 8

    (13) Inst -> Inst_Salida .

    SEMICOLON       reduce using rule 13 (Inst -> Inst_Salida .)
    INST_END        reduce using rule 13 (Inst -> Inst_Salida .)
    $end            reduce using rule 13 (Inst -> Inst_Salida .)
    INST_ELSE       reduce using rule 13 (Inst -> Inst_Salida .)
    VAR_IDENTIFIER  reduce using rule 13 (Inst -> Inst_Salida .)
    LPAREN          reduce using rule 13 (Inst -> Inst_Salida .)
    NUMBER          reduce using rule 13 (Inst -> Inst_Salida .)


state 9

    (75) Inst_While -> INST_WHILE . Operacion_booleana INST_DO Bloque_Inst
    (32) Operacion_booleana -> . Operacion_binaria Opr_bool Operacion_binaria
    (33) Operacion_booleana -> . Operacion_booleana AND Operacion_booleana
    (34) Operacion_booleana -> . Operacion_booleana OR Operacion_booleana
    (35) Operacion_booleana -> . LPAREN Operacion_booleana RPAREN
    (36) Operacion_booleana -> . TRUE
    (37) Operacion_booleana -> . FALSE
    (38) Operacion_booleana -> . VAR_IDENTIFIER
    (39) Operacion_booleana -> . NOT Operacion_booleana
    (46) Operacion_binaria -> . Operacion_binaria PLUS Term
    (47) Operacion_binaria -> . Operacion_binaria MINUS Term
    (48) Operacion_binaria -> . Term
    (49) Term -> . Term TIMES Factor
    (50) Term -> . Term DIVIDE Factor
    (51) Term -> . Factor
    (52) Factor -> . NUMBER
    (53) Factor -> . VAR_IDENTIFIER
    (54) Factor -> . LPAREN Operacion_binaria RPAREN

    LPAREN          shift and go to state 49
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45
    VAR_IDENTIFIER  shift and go to state 41
    NOT             shift and go to state 46
    NUMBER          shift and go to state 33

    Operacion_binaria              shift and go to state 48
    Term                           shift and go to state 38
    Factor                         shift and go to state 40
    Operacion_booleana             shift and go to state 50

state 10

    (61) Inst_Lectura -> INST_READ . VAR_IDENTIFIER

    VAR_IDENTIFIER  shift and go to state 51


state 11

    (2) Bloque_Inst -> INST_BEGIN . Lista_Inst INST_END
    (4) Lista_Inst -> . Inst
    (5) Lista_Inst -> . Inst SEMICOLON Lista_Inst
    (6) Inst -> . Inst_Declare
    (7) Inst -> . Inst_Asignacion
    (8) Inst -> . Inst_Lectura
    (9) Inst -> . Inst_For
    (10) Inst -> . Inst_While
    (11) Inst -> . Inst_If
    (12) Inst -> . Inst_Case
    (13) Inst -> . Inst_Salida
    (14) Inst -> . Inst_Funcion
    (19) Inst_Declare -> . Inst_Declareau
    (20) Inst_Declare -> . Inst_Declareau SEMICOLON Inst_Declare
    (28) Inst_Asignacion -> . VAR_IDENTIFIER EQUAL Expresion
    (61) Inst_Lectura -> . INST_READ VAR_IDENTIFIER
    (74) Inst_For -> . INST_FOR VAR_IDENTIFIER INST_IN Rango INST_DO Bloque_Inst
    (75) Inst_While -> . INST_WHILE Operacion_booleana INST_DO Bloque_Inst
    (68) Inst_If -> . INST_IF Operacion_booleana INST_THEN Bloque_Inst
    (69) Inst_If -> . INST_IF Operacion_booleana INST_THEN Bloque_Inst INST_ELSE Bloque_Inst
    (70) Inst_Case -> . INST_CASE Operacion_binaria INST_OF Casos
    (62) Inst_Salida -> . INST_WRITE Lista_Aux
    (63) Inst_Salida -> . INST_WRITELN Lista_Aux
    (15) Inst_Funcion -> . RTOI LPAREN VAR_IDENTIFIER RPAREN
    (16) Inst_Funcion -> . LENGTH LPAREN VAR_IDENTIFIER RPAREN
    (17) Inst_Funcion -> . TOP LPAREN VAR_IDENTIFIER RPAREN
    (18) Inst_Funcion -> . BOTTOM LPAREN VAR_IDENTIFIER RPAREN
    (21) Inst_Declareau -> . INST_DECLARE Lista_Declare

    VAR_IDENTIFIER  shift and go to state 18
    INST_READ       shift and go to state 10
    INST_FOR        shift and go to state 21
    INST_WHILE      shift and go to state 9
    INST_IF         shift and go to state 22
    INST_CASE       shift and go to state 20
    INST_WRITE      shift and go to state 5
    INST_WRITELN    shift and go to state 23
    RTOI            shift and go to state 25
    LENGTH          shift and go to state 24
    TOP             shift and go to state 6
    BOTTOM          shift and go to state 13
    INST_DECLARE    shift and go to state 3

    Inst_Salida                    shift and go to state 8
    Inst_Declare                   shift and go to state 12
    Inst_Funcion                   shift and go to state 4
    Inst_If                        shift and go to state 19
    Inst_For                       shift and go to state 14
    Inst_While                     shift and go to state 16
    Inst                           shift and go to state 52
    Inst_Asignacion                shift and go to state 26
    Inst_Case                      shift and go to state 27
    Inst_Lectura                   shift and go to state 17
    Lista_Inst                     shift and go to state 53
    Inst_Declareau                 shift and go to state 28

state 12

    (6) Inst -> Inst_Declare .

    SEMICOLON       reduce using rule 6 (Inst -> Inst_Declare .)
    INST_END        reduce using rule 6 (Inst -> Inst_Declare .)
    $end            reduce using rule 6 (Inst -> Inst_Declare .)
    INST_ELSE       reduce using rule 6 (Inst -> Inst_Declare .)
    VAR_IDENTIFIER  reduce using rule 6 (Inst -> Inst_Declare .)
    LPAREN          reduce using rule 6 (Inst -> Inst_Declare .)
    NUMBER          reduce using rule 6 (Inst -> Inst_Declare .)


state 13

    (18) Inst_Funcion -> BOTTOM . LPAREN VAR_IDENTIFIER RPAREN

    LPAREN          shift and go to state 54


state 14

    (9) Inst -> Inst_For .

    SEMICOLON       reduce using rule 9 (Inst -> Inst_For .)
    INST_END        reduce using rule 9 (Inst -> Inst_For .)
    $end            reduce using rule 9 (Inst -> Inst_For .)
    INST_ELSE       reduce using rule 9 (Inst -> Inst_For .)
    VAR_IDENTIFIER  reduce using rule 9 (Inst -> Inst_For .)
    LPAREN          reduce using rule 9 (Inst -> Inst_For .)
    NUMBER          reduce using rule 9 (Inst -> Inst_For .)


state 15

    (3) Bloque_Inst -> Inst .

    $end            reduce using rule 3 (Bloque_Inst -> Inst .)
    SEMICOLON       reduce using rule 3 (Bloque_Inst -> Inst .)
    INST_END        reduce using rule 3 (Bloque_Inst -> Inst .)
    INST_ELSE       reduce using rule 3 (Bloque_Inst -> Inst .)
    VAR_IDENTIFIER  reduce using rule 3 (Bloque_Inst -> Inst .)
    LPAREN          reduce using rule 3 (Bloque_Inst -> Inst .)
    NUMBER          reduce using rule 3 (Bloque_Inst -> Inst .)


state 16

    (10) Inst -> Inst_While .

    SEMICOLON       reduce using rule 10 (Inst -> Inst_While .)
    INST_END        reduce using rule 10 (Inst -> Inst_While .)
    $end            reduce using rule 10 (Inst -> Inst_While .)
    INST_ELSE       reduce using rule 10 (Inst -> Inst_While .)
    VAR_IDENTIFIER  reduce using rule 10 (Inst -> Inst_While .)
    LPAREN          reduce using rule 10 (Inst -> Inst_While .)
    NUMBER          reduce using rule 10 (Inst -> Inst_While .)


state 17

    (8) Inst -> Inst_Lectura .

    SEMICOLON       reduce using rule 8 (Inst -> Inst_Lectura .)
    INST_END        reduce using rule 8 (Inst -> Inst_Lectura .)
    $end            reduce using rule 8 (Inst -> Inst_Lectura .)
    INST_ELSE       reduce using rule 8 (Inst -> Inst_Lectura .)
    VAR_IDENTIFIER  reduce using rule 8 (Inst -> Inst_Lectura .)
    LPAREN          reduce using rule 8 (Inst -> Inst_Lectura .)
    NUMBER          reduce using rule 8 (Inst -> Inst_Lectura .)


state 18

    (28) Inst_Asignacion -> VAR_IDENTIFIER . EQUAL Expresion

    EQUAL           shift and go to state 55


state 19

    (11) Inst -> Inst_If .

    SEMICOLON       reduce using rule 11 (Inst -> Inst_If .)
    INST_END        reduce using rule 11 (Inst -> Inst_If .)
    $end            reduce using rule 11 (Inst -> Inst_If .)
    INST_ELSE       reduce using rule 11 (Inst -> Inst_If .)
    VAR_IDENTIFIER  reduce using rule 11 (Inst -> Inst_If .)
    LPAREN          reduce using rule 11 (Inst -> Inst_If .)
    NUMBER          reduce using rule 11 (Inst -> Inst_If .)


state 20

    (70) Inst_Case -> INST_CASE . Operacion_binaria INST_OF Casos
    (46) Operacion_binaria -> . Operacion_binaria PLUS Term
    (47) Operacion_binaria -> . Operacion_binaria MINUS Term
    (48) Operacion_binaria -> . Term
    (49) Term -> . Term TIMES Factor
    (50) Term -> . Term DIVIDE Factor
    (51) Term -> . Factor
    (52) Factor -> . NUMBER
    (53) Factor -> . VAR_IDENTIFIER
    (54) Factor -> . LPAREN Operacion_binaria RPAREN

    NUMBER          shift and go to state 33
    VAR_IDENTIFIER  shift and go to state 56
    LPAREN          shift and go to state 58

    Operacion_binaria              shift and go to state 57
    Term                           shift and go to state 38
    Factor                         shift and go to state 40

state 21

    (74) Inst_For -> INST_FOR . VAR_IDENTIFIER INST_IN Rango INST_DO Bloque_Inst

    VAR_IDENTIFIER  shift and go to state 59


state 22

    (68) Inst_If -> INST_IF . Operacion_booleana INST_THEN Bloque_Inst
    (69) Inst_If -> INST_IF . Operacion_booleana INST_THEN Bloque_Inst INST_ELSE Bloque_Inst
    (32) Operacion_booleana -> . Operacion_binaria Opr_bool Operacion_binaria
    (33) Operacion_booleana -> . Operacion_booleana AND Operacion_booleana
    (34) Operacion_booleana -> . Operacion_booleana OR Operacion_booleana
    (35) Operacion_booleana -> . LPAREN Operacion_booleana RPAREN
    (36) Operacion_booleana -> . TRUE
    (37) Operacion_booleana -> . FALSE
    (38) Operacion_booleana -> . VAR_IDENTIFIER
    (39) Operacion_booleana -> . NOT Operacion_booleana
    (46) Operacion_binaria -> . Operacion_binaria PLUS Term
    (47) Operacion_binaria -> . Operacion_binaria MINUS Term
    (48) Operacion_binaria -> . Term
    (49) Term -> . Term TIMES Factor
    (50) Term -> . Term DIVIDE Factor
    (51) Term -> . Factor
    (52) Factor -> . NUMBER
    (53) Factor -> . VAR_IDENTIFIER
    (54) Factor -> . LPAREN Operacion_binaria RPAREN

    LPAREN          shift and go to state 49
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45
    VAR_IDENTIFIER  shift and go to state 41
    NOT             shift and go to state 46
    NUMBER          shift and go to state 33

    Operacion_binaria              shift and go to state 48
    Term                           shift and go to state 38
    Factor                         shift and go to state 40
    Operacion_booleana             shift and go to state 60

state 23

    (63) Inst_Salida -> INST_WRITELN . Lista_Aux
    (64) Lista_Aux -> . Expresion
    (65) Lista_Aux -> . STRING
    (66) Lista_Aux -> . Expresion COMMA Lista_Aux
    (67) Lista_Aux -> . STRING COMMA Lista_Aux
    (29) Expresion -> . Operacion_binaria
    (30) Expresion -> . Operacion_booleana
    (31) Expresion -> . Rango
    (46) Operacion_binaria -> . Operacion_binaria PLUS Term
    (47) Operacion_binaria -> . Operacion_binaria MINUS Term
    (48) Operacion_binaria -> . Term
    (32) Operacion_booleana -> . Operacion_binaria Opr_bool Operacion_binaria
    (33) Operacion_booleana -> . Operacion_booleana AND Operacion_booleana
    (34) Operacion_booleana -> . Operacion_booleana OR Operacion_booleana
    (35) Operacion_booleana -> . LPAREN Operacion_booleana RPAREN
    (36) Operacion_booleana -> . TRUE
    (37) Operacion_booleana -> . FALSE
    (38) Operacion_booleana -> . VAR_IDENTIFIER
    (39) Operacion_booleana -> . NOT Operacion_booleana
    (55) Rango -> . Operacion_binaria RANGE Operacion_binaria
    (56) Rango -> . Rango PLUS Rango
    (57) Rango -> . Rango TIMES Operacion_binaria
    (58) Rango -> . Rango INTERSECTION Rango
    (59) Rango -> . RangoF
    (49) Term -> . Term TIMES Factor
    (50) Term -> . Term DIVIDE Factor
    (51) Term -> . Factor
    (60) RangoF -> . LPAREN Rango RPAREN
    (52) Factor -> . NUMBER
    (53) Factor -> . VAR_IDENTIFIER
    (54) Factor -> . LPAREN Operacion_binaria RPAREN

    STRING          shift and go to state 39
    LPAREN          shift and go to state 42
    TRUE            shift and go to state 35
    FALSE           shift and go to state 45
    VAR_IDENTIFIER  shift and go to state 41
    NOT             shift and go to state 46
    NUMBER          shift and go to state 33

    Expresion                      shift and go to state 37
    Operacion_binaria              shift and go to state 44
    RangoF                         shift and go to state 32
    Factor                         shift and go to state 40
    Term                           shift and go to state 38
    Lista_Aux                      shift and go to state 61
    Rango                          shift and go to state 43
    Operacion_booleana             shift and go to state 36

state 24

    (16) Inst_Funcion -> LENGTH . LPAREN VAR_IDENTIFIER RPAREN

    LPAREN          shift and go to state 62


state 25

    (15) Inst_Funcion -> RTOI . LPAREN VAR_IDENTIFIER RPAREN

    LPAREN          shift and go to state 63


state 26

    (7) Inst -> Inst_Asignacion .

    SEMICOLON       reduce using rule 7 (Inst -> Inst_Asignacion .)
    INST_END        reduce using rule 7 (Inst -> Inst_Asignacion .)
    $end            reduce using rule 7 (Inst -> Inst_Asignacion .)
    INST_ELSE       reduce using rule 7 (Inst -> Inst_Asignacion .)
    VAR_IDENTIFIER  reduce using rule 7 (Inst -> Inst_Asignacion .)
    LPAREN          reduce using rule 7 (Inst -> Inst_Asignacion .)
    NUMBER          reduce using rule 7 (Inst -> Inst_Asignacion .)


state 27

    (12) Inst -> Inst_Case .

    SEMICOLON       reduce using rule 12 (Inst -> Inst_Case .)
    INST_END        reduce using rule 12 (Inst -> Inst_Case .)
    $end            reduce using rule 12 (Inst -> Inst_Case .)
    INST_ELSE       reduce using rule 12 (Inst -> Inst_Case .)
    VAR_IDENTIFIER  reduce using rule 12 (Inst -> Inst_Case .)
    LPAREN          reduce using rule 12 (Inst -> Inst_Case .)
    NUMBER          reduce using rule 12 (Inst -> Inst_Case .)


state 28

    (19) Inst_Declare -> Inst_Declareau .
    (20) Inst_Declare -> Inst_Declareau . SEMICOLON Inst_Declare

  ! shift/reduce conflict for SEMICOLON resolved as shift
    INST_END        reduce using rule 19 (Inst_Declare -> Inst_Declareau .)
    $end            reduce using rule 19 (Inst_Declare -> Inst_Declareau .)
    INST_ELSE       reduce using rule 19 (Inst_Declare -> Inst_Declareau .)
    VAR_IDENTIFIER  reduce using rule 19 (Inst_Declare -> Inst_Declareau .)
    LPAREN          reduce using rule 19 (Inst_Declare -> Inst_Declareau .)
    NUMBER          reduce using rule 19 (Inst_Declare -> Inst_Declareau .)
    SEMICOLON       shift and go to state 64

  ! SEMICOLON       [ reduce using rule 19 (Inst_Declare -> Inst_Declareau .) ]


state 29

    (23) Lista_Variables -> VAR_IDENTIFIER .
    (24) Lista_Variables -> VAR_IDENTIFIER . COMMA Lista_Variables

    INST_AS         reduce using rule 23 (Lista_Variables -> VAR_IDENTIFIER .)
    COMMA           shift and go to state 65


state 30

    (22) Lista_Declare -> Lista_Variables . INST_AS Tipo

    INST_AS         shift and go to state 66


state 31

    (21) Inst_Declareau -> INST_DECLARE Lista_Declare .

    SEMICOLON       reduce using rule 21 (Inst_Declareau -> INST_DECLARE Lista_Declare .)
    $end            reduce using rule 21 (Inst_Declareau -> INST_DECLARE Lista_Declare .)
    INST_END        reduce using rule 21 (Inst_Declareau -> INST_DECLARE Lista_Declare .)
    INST_ELSE       reduce using rule 21 (Inst_Declareau -> INST_DECLARE Lista_Declare .)
    VAR_IDENTIFIER  reduce using rule 21 (Inst_Declareau -> INST_DECLARE Lista_Declare .)
    LPAREN          reduce using rule 21 (Inst_Declareau -> INST_DECLARE Lista_Declare .)
    NUMBER          reduce using rule 21 (Inst_Declareau -> INST_DECLARE Lista_Declare .)


state 32

    (59) Rango -> RangoF .

    PLUS            reduce using rule 59 (Rango -> RangoF .)
    TIMES           reduce using rule 59 (Rango -> RangoF .)
    INTERSECTION    reduce using rule 59 (Rango -> RangoF .)
    $end            reduce using rule 59 (Rango -> RangoF .)
    SEMICOLON       reduce using rule 59 (Rango -> RangoF .)
    INST_END        reduce using rule 59 (Rango -> RangoF .)
    INST_ELSE       reduce using rule 59 (Rango -> RangoF .)
    VAR_IDENTIFIER  reduce using rule 59 (Rango -> RangoF .)
    LPAREN          reduce using rule 59 (Rango -> RangoF .)
    NUMBER          reduce using rule 59 (Rango -> RangoF .)
    RPAREN          reduce using rule 59 (Rango -> RangoF .)
    COMMA           reduce using rule 59 (Rango -> RangoF .)
    -               reduce using rule 59 (Rango -> RangoF .)
    INST_DO         reduce using rule 59 (Rango -> RangoF .)


state 33

    (52) Factor -> NUMBER .
